--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Georg Jäger | System Sciences Graz</title>
+    <title>Georg Jäger | Systems Sciences Graz</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -74,7 +74,7 @@
 
                 <div class="row">
                     <div class="col-lg-12 text-center">
-                    <h2 class="section-heading text-uppercase">About</h2>
+                    <h2 class="section-heading text-uppercase">About :)</h2>
 
                     <h4> <span style="font-size: 14px; text-decoration: none;">Dr. rer. nat. </span> <br>  Georg Jäger</h4>
                     <!--<h4 class="section-subheading text-muted">Georg Jäger</h4>
