--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <div class="row">
                   <div class="col-lg-8 mx-auto text-center">
 
-                    <p>After obtaining my PhD in physics, I am now Assistant Professor for Computational Systems Sciences at the <a href="https://ess.uni-graz.at/en/">Institute of Environmental Systems Sciences</a>, <a href="https://www.uni-graz.at/en/">University of Graz</a>. My main research interests are the simulation and modelling of complex systems in fields relevant to the challenges our world currently faces. </p>
+                    <p>:) After obtaining my PhD in physics, I am now Assistant Professor for Computational Systems Sciences at the <a href="https://ess.uni-graz.at/en/">Institute of Environmental Systems Sciences</a>, <a href="https://www.uni-graz.at/en/">University of Graz</a>. My main research interests are the simulation and modelling of complex systems in fields relevant to the challenges our world currently faces. </p>
                   </div>
                 </div>
 
