--- a/index.html
+++ b/index.html
@@ -242,6 +242,7 @@
 <a href="http://www.jaeger-ge.org/CBE.pdf">Lecture Notes Computational Basics (English)</a> <br> <br>
 <a href="http://www.jaeger-ge.org/netlogo-skriptum_GJ_CC.pdf">Introduction to agent-based modelling in NetLogo (german)</a> <br> <br>
 <a href="http://www.jaeger-ge.org/ohnesystem.pdf">Introduction to Systems Sciences (german)</a> <br> <br>
+<a href="http://www.jaeger-ge.org/teaching_portfolio.pdf">My Teaching Portfolio</a> <br> <br>
 
 
 </h3>
