--- a/index.html
+++ b/index.html
@@ -240,9 +240,9 @@
                                         <h2 class="section-heading text-uppercase">Teaching</h2>
                                         <h3 class="section-subheading">
 <a href="http://www.jaeger-ge.org/CBE.pdf">Lecture Notes Computational Basics (English)</a> <br> <br>
-<a href="http://www.jaeger-ge.org/netlogo-skriptum_GJ_CC.pdf">Introduction to agent-based modelling in NetLogo (german)</a> <br> <br>
-<a href="http://www.jaeger-ge.org/ohnesystem.pdf">Introduction to Systems Sciences (german)</a> <br> <br>
-<a href="http://www.jaeger-ge.org/teaching_portfolio.pdf">My Teaching Portfolio</a> <br> <br>
+<a href="http://www.jaeger-ge.org/netlogo-skriptum_GJ_CC.pdf">Introduction to agent-based modelling in NetLogo (German)</a> <br> <br>
+<a href="http://www.jaeger-ge.org/ohnesystem.pdf">Introduction to Systems Sciences (German)</a> <br> <br>
+<a href="http://www.jaeger-ge.org/teaching_portfolio.pdf">My Teaching Portfolio (English) </a> <br> <br>
 
 
 </h3>
