--- a/de/index.html
+++ b/de/index.html
@@ -94,7 +94,7 @@
                 <div class="row">
                   <div class="col-lg-8 mx-auto text-center">
 
-                    <p>Nach meinem Doktorat in Physik bin ich nun Assistenzprofessor für Computational Systems Sciences am <a href="https://ess.uni-graz.at/de/">Institut für Umweltsystemwissenschaften</a> der <a href="https://www.uni-graz.at/de/">Universität Graz</a>.
+                    <p>Nach meinem Doktorat in Physik bin ich nun Assoziierter Professor für Computational Systems Sciences am <a href="https://ess.uni-graz.at/de/">Institut für Umweltsystemwissenschaften</a> der <a href="https://www.uni-graz.at/de/">Universität Graz</a>.
                       Meine Forschungsschwerpunkte sind die Simulation und Modellierung komplexer Systeme in Bereichen, die für die aktuellen Herausforderungen unserer Welt relevant sind.
                     </p>
                   </div>
